// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QualityIndicatorField component should render default view 1`] = `
<WithStyles(GenericSelectField)
  error={false}
  errorText=""
  hideLabel={false}
  itemsList={
    Array [
      Object {
        "text": "Disseminated via nationally recognised outlet or entity",
        "value": 453996,
      },
      Object {
        "text": "Disseminated via internationally recognised outlet or entity",
        "value": 453997,
      },
      Object {
        "text": "Association with recognised national entities, distinct from co-creation",
        "value": 454033,
      },
      Object {
        "text": "Association with recognised international entities, distinct from co-creation",
        "value": 454034,
      },
      Object {
        "text": "Reviews, prizes, awards recognition of the output",
        "value": 454035,
      },
      Object {
        "text": "Commissioned by external body",
        "value": 454036,
      },
      Object {
        "text": "Repeat performances, reproductions, republications or re-exhibitions",
        "value": 454037,
      },
      Object {
        "text": "Selected for use by nationally recognised outlet or entity",
        "value": 454038,
      },
      Object {
        "text": "Selected for use by internationally recognised outlet or entity",
        "value": 454039,
      },
      Object {
        "text": "Other (add details to Author/Creator contribution statement)",
        "value": 454040,
      },
    ]
  }
  locale={
    Object {
      "label": undefined,
      "placeholder": undefined,
    }
  }
  selectedValue={Array []}
/>
`;

exports[`QualityIndicatorField component should render with given field props 1`] = `
<WithStyles(GenericSelectField)
  error={true}
  errorText="Test error"
  hideLabel={false}
  input={
    Object {
      "onChange": [MockFunction],
      "value": Array [
        "One",
        "Two",
      ],
    }
  }
  itemsList={
    Array [
      Object {
        "text": "Disseminated via nationally recognised outlet or entity",
        "value": 453996,
      },
      Object {
        "text": "Disseminated via internationally recognised outlet or entity",
        "value": 453997,
      },
      Object {
        "text": "Association with recognised national entities, distinct from co-creation",
        "value": 454033,
      },
      Object {
        "text": "Association with recognised international entities, distinct from co-creation",
        "value": 454034,
      },
      Object {
        "text": "Reviews, prizes, awards recognition of the output",
        "value": 454035,
      },
      Object {
        "text": "Commissioned by external body",
        "value": 454036,
      },
      Object {
        "text": "Repeat performances, reproductions, republications or re-exhibitions",
        "value": 454037,
      },
      Object {
        "text": "Selected for use by nationally recognised outlet or entity",
        "value": 454038,
      },
      Object {
        "text": "Selected for use by internationally recognised outlet or entity",
        "value": 454039,
      },
      Object {
        "text": "Other (add details to Author/Creator contribution statement)",
        "value": 454040,
      },
    ]
  }
  label="Test label"
  locale={
    Object {
      "label": "Test label",
      "placeholder": "Test placeholder",
    }
  }
  meta={
    Object {
      "error": "Test error",
    }
  }
  onChange={[MockFunction]}
  placeholder="Test placeholder"
  selectedValue={
    Array [
      "One",
      "Two",
    ]
  }
/>
`;
